change in images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="content/assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="content/assets/img/ts03.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Tipu Sultan</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="content/assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="content/assets/img/ts05.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software/Application &amp; Web Developer.</h3>
